feat: added POST and DELETE /api/v1/users/:uid/follow routes
